[package]
name = "is-dst"
version = "0.1.0"
edition = "2021"
authors = ["Marvin Gudel <github.marvin@gudel.org>"]
description = "Check if its day light saving time."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.30", features = [ "macros" ] }

